--- a/package.json
+++ b/package.json
@@ -5,12 +5,8 @@
   "main": "index.js",
   "scripts": {
     "init": "webpack --progress --config webpack.dev.config.js",
-    "dev": "webpack-dev-server --content-base ./ --open --inline --hot --compress --port 8089 --host 127.0.0.1 --history-api-fallback --config webpack.dev.config.js",
+    "dev": "webpack --progress --config webpack.dev.config.js && webpack-dev-server --content-base ./ --open --inline  --compress --port 8089 --host 127.0.0.1 --hot --history-api-fallback --config webpack.dev.config.js",
     "build": "webpack --progress --hide-modules --config webpack.prod.config.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/iview/iview-project.git"
   },
   "author": "laynezhou",
   "license": "MIT",
