--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "webpack --progress --config webpack.dev.config.js --watch",
-    "dev": "webpack --progress --config webpack.dev.config.js && webpack-dev-server --content-base ./ --open --inline  --compress --port 8089 --host 127.0.0.1 --hot --history-api-fallback --config webpack.dev.config.js",
+    "dev": "webpack-dev-server --content-base ./ --open --inline  --compress --port 8089 --host 127.0.0.1 --hot --history-api-fallback --config webpack.dev.config.js",
     "build": "webpack --progress --hide-modules --config webpack.prod.config.js"
   },
   "author": "laynezhou",
