--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-server": "^2.4.1",
     "webpack-merge": "^3.0.0"
   },
